# yggdrasil

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci_release.yml  ci_wheels.yml  release.yml  testpypi.yml
cmake/install/: fix_macos_runtime_paths.cmake  fix_unix_runtime_paths.cmake
dependencies/: CMakeLists.txt
dependencies/argparse/: CMakeLists.txt
dependencies/benchmark/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/cista/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/gtl/: CMakeLists.txt
dependencies/gtl/package/: CMakeLists.txt
dependencies/loki/: CMakeLists.txt
dependencies/nanobind/: CMakeLists.txt
dependencies/oneTBB/: CMakeLists.txt
dependencies/valla/: CMakeLists.txt
python/: CMakeLists.txt  pyyggdrasil_build_backend.py  yggdrasil_build_backend.py
python/src/yggdrasil/: __init__.py
python/tests/: test_import.py
src/: CMakeLists.txt
src/argparse/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/boost/: CMakeLists.txt
src/cista/: CMakeLists.txt
src/fmt/: CMakeLists.txt
src/googletest/: CMakeLists.txt
src/gtl/: CMakeLists.txt
src/gtl/package/: CMakeLists.txt  gtlConfig.cmake.in
src/nanobind/: CMakeLists.txt
src/nauty/: CMakeLists.txt
src/nauty/package/: CMakeLists.txt  NautyConfig.cmake.in
src/oneTBB/: CMakeLists.txt
src/valla/: CMakeLists.txt
