[build-system]
requires = [
    "scikit-build-core>=0.10",
]
build-backend = "pyyggdrasil_build_backend"
backend-path = ["python"]

[project]
name = "pyyggdrasil"
version = "999.0.0"
description = "Native dependency provider for Dominik Drexler's planning projects"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/planning-and-learning/yggdrasil"

[tool.scikit-build]
build.targets = ["pyyggdrasil_wheel"]
cmake.build-type = "Release"
install.components = ["pyyggdrasil"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "README.md",
    "pyproject.toml",
    "python/**",
    "src/**",
]
exclude = [
    "build*/**",
    "dependencies-build/**",
    "dependencies-install/**",
    "*.egg-info/**",
]

[tool.scikit-build.cmake.define]
YGGDRASIL_NATIVE_PREFIX = {env = "YGGDRASIL_NATIVE_PREFIX", default = "dependencies-install"}
CMAKE_INSTALL_LIBDIR = "lib"

[tool.cibuildwheel]
container-engine = "docker"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=$(python -c 'import os, pathlib; prefix = pathlib.Path(\"dependencies-install\"); print(os.pathsep.join(str(path) for path in sorted(prefix.glob(\"lib*\")) if path.is_dir()))') auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
